--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,9 @@ serde_json = "1.0.59"
 reqwest = { version = "0.10.8", features = ["blocking", "json"] }
 tokio = { version = "0.2.22", features = ["full"] }
 scraper = "0.12.0"
+actix-web = "3.2.0"
+dotenv = "0.15.0"
+actix-rt = "1.0.0"
+mongodb = { version = "1.1.1", features = ["async-std-runtime"], default_features = false }
+log = "0.4.0"
+env_logger = "0.8.1"
