--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,10 @@
-MONGO_URL=mongodb://faxtopRoot:faxtopRoot@mongo/faxtop
+FAXTOP_MONGO_URL=mongodb://user:pass@localhost/faxtop
+FAXTOP_DOMAIN_URL=http://localhost
+FAXTOP_HOST=localhost
+FAXTOP_PORT=3000
+FAXTOP_SECRET_KEY=1234567812345678
+FAXTOP_SMTP_USERNAME=faxtop
+FAXTOP_SMTP_PASSWORD=faxtop
+FAXTOP_SMTP_HOST=smtp://faxtop
+FAXTOP_SMTP_PORT=25
+SMTP_SENDER_NAME=faxtop
