--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,16 @@ serde_json = "1.0.59"
 reqwest = { version = "0.10.8", features = ["blocking", "json"] }
 tokio = { version = "0.2.22", features = ["full"] }
 scraper = "0.12.0"
+derive_more = "0.99.11"
+native-tls = "0.2.6"
+lettre = { version = "0.9.5", features = ["serde", "serde-impls", "sendmail-transport", "smtp-transport", "serde_json"] }
+lettre_email = "0.9.4"
+pbkdf2 = "0.6"
 actix-web = "3.2.0"
+actix-cors = "0.5.3"
+actix-session = "0.4.0"
+chrono = { version = "0.4.19", features = ["serde"] }
+uuid = { version = "0.8.1", features = ["serde", "v4"] }
 dotenv = "0.15.0"
 actix-rt = "1.0.0"
 mongodb = { version = "1.1.1", features = ["async-std-runtime"], default_features = false }
